workshop/k8s101/commands.yaml
apiVersion: v1
kind: Pod
metadata:
  name: command3
spec:
  containers:
  - name: command-demo-container
    image: debian
    command: ["printenv"]
    args: ["HOSTNAME", "KUBERNETES_PORT"]
